k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: atlas
  labels:
    name: atlas
    environment: production
